--- a/index.ipynb
+++ b/index.ipynb
@@ -14,49 +14,49 @@
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On a two-button mouse, middle is left + right.  \n",
     "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.  \n",
     "\n",
-    "[Atomic solid](demos/AtomicSolid.ipynb): ball-and-spring model of a solid\n",
+    "[Atomic solid](Demos/AtomicSolid.ipynb): ball-and-spring model of a solid\n",
     "\n",
-    "[Binary star](demos/BinaryStar.ipynb): two stars orbit each other\n",
+    "[Binary star](Demos/BinaryStar.ipynb): two stars orbit each other\n",
     "\n",
-    "[Bounce](demos/Bounce.ipynb): a ball bounces in a 3D box\n",
+    "[Bounce](Demos/Bounce.ipynb): a ball bounces in a 3D box\n",
     "\n",
-    "[Local moving lights](demos/BoxLightTest.ipynb): local lights moving around the scene\n",
+    "[Local moving lights](Demos/BoxLightTest.ipynb): local lights moving around the scene\n",
     "\n",
-    "[Buttons, sliders, and menus](demos/ButtonsSlidersMenus.ipynb): widgets controlling a scene\n",
+    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus.ipynb): widgets controlling a scene\n",
     "\n",
-    "[RGB-HSV colors](demos/Color-RGB-HSV.ipynb): RGB <-> HSV color conversions\n",
+    "[RGB-HSV colors](Demos/Color-RGB-HSV.ipynb): RGB <-> HSV color conversions\n",
     "\n",
-    "[Dipole electric field](demos/DipoleElectricField.ipynb): the electric field of a dipole (+ and - charges)\n",
+    "[Dipole electric field](Demos/DipoleElectricField.ipynb): the electric field of a dipole (+ and - charges)\n",
     "\n",
-    "[Double pendulum](demos/DoublePendulum.ipynb): a double pendulum shows chaotic motion\n",
+    "[Double pendulum](Demos/DoublePendulum.ipynb): a double pendulum shows chaotic motion\n",
     "\n",
-    "[Live graphs](demos/Graphs.ipynb): incremental graphing; mouse over the graph with crosshairs\n",
+    "[Live graphs](Demos/Graphs.ipynb): incremental graphing; mouse over the graph with crosshairs\n",
     "\n",
-    "[Gyroscope](demos/Gyroscope.ipynb): a gyroscope precessing and nutting on a pedestal\n",
+    "[Gyroscope](Demos/Gyroscope.ipynb): a gyroscope precessing and nutting on a pedestal\n",
     "\n",
-    "[Gyroscope-suspended](demos/Gyroscope-Suspended.ipynb): a gyroscope suspended from a spring\n",
+    "[Gyroscope-suspended](Demos/Gyroscope-Suspended.ipynb): a gyroscope suspended from a spring\n",
     "\n",
-    "[Hard-sphere gas](demos/HardSphereGas.ipynb): a gas of colliding hard spheres, with graph of speed distribution\n",
+    "[Hard-sphere gas](Demos/HardSphereGas.ipynb): a gas of colliding hard spheres, with graph of speed distribution\n",
     "\n",
-    "[Lorenz function](demos/Lorenz.ipynb): the Lorenz function\n",
+    "[Lorenz function](Demos/Lorenz.ipynb): the Lorenz function\n",
     "\n",
-    "[Mouse dragging](demos/MouseDrag.ipynb): drag objects with the mouse\n",
+    "[Mouse dragging](Demos/MouseDrag.ipynb): drag objects with the mouse\n",
     "\n",
-    "[Mouse picking](demos/MousePicking.ipynb): click on an object to change its color; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
+    "[Mouse picking](Demos/MousePicking.ipynb): click on an object to change its color; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
     "\n",
-    "[Rotating boxes](demos/RotatingBoxes.ipynb): 1000 rotating boxes; there are plans to increase the speed significantly\n",
+    "[Rotating boxes](Demos/RotatingBoxes.ipynb): 1000 rotating boxes; there are plans to increase the speed significantly\n",
     "\n",
-    "[Rug](demos/Rug.ipynb): a wave moves along a Navajo rug\n",
+    "[Rug](Demos/Rug.ipynb): a wave moves along a Navajo rug\n",
     "\n",
-    "[Stars](demos/Stars.ipynb): 20 stars interacting with each other gravitationally\n",
+    "[Stars](Demos/Stars.ipynb): 20 stars interacting with each other gravitationally\n",
     "\n",
-    "[Surreal Stonehenge](demos/Stonehenge.ipynb): fly through a surreal scene\n",
+    "[Surreal Stonehenge](Demos/Stonehenge.ipynb): fly through a surreal scene\n",
     "\n",
-    "[Textures](demos/Textures.ipynb): textures currently supported by Jupyter VPython\n",
+    "[Textures](Demos/Textures.ipynb): textures currently supported by Jupyter VPython\n",
     "\n",
-    "[Transparency](demos/Transparency.ipynb): true pixel-level transparency; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
+    "[Transparency](Demos/Transparency.ipynb): true pixel-level transparency; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
     "\n",
-    "[VPython objects](demos/VPythonObjects.ipynb): examples of most of the VPython objects"
+    "[VPython objects](Demos/VPythonObjects.ipynb): examples of most of the VPython objects"
    ]
   },
   {
