--- a/Demos/Stonehenge.ipynb
+++ b/Demos/Stonehenge.ipynb
@@ -46,6 +46,42 @@
     {
      "data": {
       "application/javascript": [
+       "require.undef(\"nbextensions/pako.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_deflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_inflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
        "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
       ],
       "text/plain": [
@@ -301,7 +337,7 @@
     "def setroam(evt):\n",
     "    global roam\n",
     "    roam = not roam\n",
-    "\n",
+    "    \n",
     "scene.bind(\"mousedown mouseup\", setroam)\n",
     "\n",
     "while True:\n",
@@ -314,7 +350,6 @@
     "            newray = norm(vector(ray.x, 0, ray.z))\n",
     "            angle = asin(scene.forward.cross(newray).dot(scene.up))\n",
     "            scene.camera.rotate(angle=angle/30, axis=scene.up)\n",
-    "            #scene.camera.axis = rotate(scene.camera.axis, angle=angle/100, axis=scene.up)\n",
     "            scene.camera.pos = scene.camera.pos + (ray.y/4)*norm(scene.camera.axis)\n",
     "\n",
     "    # Roll the log\n",
@@ -375,6 +410,15 @@
     "    # Update the analog clock on the back slab\n",
     "    clock.update()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
