--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,9 @@
     ">Right button drag or Ctrl-drag to rotate \"camera\" to view scene.  \n",
     "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On a two-button mouse, middle is left + right.  \n",
-    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.  \n",
+    "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\n",
+    "\n",
+    "##### If asked to pick a notebook type, choose VPython.\n",
     "\n",
     "[Atomic solid](Demos/AtomicSolid.ipynb): ball-and-spring model of a solid\n",
     "\n",
