Fix some typos in 0.3.6

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "[Mouse picking](Demos/MousePicking.ipynb): click on an object to change its color; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
     "\n",
-    "[Rotating boxes](Demos/RotatingBoxes.ipynb): 1000 rotating boxes; there are plans to increase the speed significantly\n",
+    "[Rotating boxes](Demos/RotatingBoxes.ipynb): 1000 rotating boxes\n",
     "\n",
     "[Rug](Demos/Rug.ipynb): a wave moves along a Navajo rug\n",
     "\n",
