--- a/Demos/RotatingBoxes.ipynb
+++ b/Demos/RotatingBoxes.ipynb
@@ -11,8 +11,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 4241\n"
+      "try\n",
+      "vector\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glowcomm\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_deflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_inflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -43,34 +152,32 @@
     "loops = 0\n",
     "ctime = 0\n",
     "start = clock()\n",
+    "N = 200\n",
     "\n",
     "while True:\n",
-    "    if loops == 100:\n",
+    "    if loops == N:\n",
     "        s = '{:0.1f} millisecond computation per loop'.format(1000*ctime/loops)\n",
     "        s += '\\n{:3.0f} loops per second'.format(loops/(clock()-start))\n",
     "        scene.caption = s\n",
     "        ctime = 0\n",
     "        loops = 0\n",
     "        start = clock()\n",
-    "    rate(200)\n",
+    "    rate(N)\n",
     "    t += dt\n",
     "    ct = clock()\n",
     "    v = length*vector(sin(t), 0, cos(t))\n",
     "    for b in boxes:\n",
-    "        b.axis = v                               # Jupyter 0.3 ms; GlowScript 0.04 ms \n",
-    "        #b.rotate(angle=.01, axis=vector(0,1,0)) # Jupyter 3.5 ms; GlowScript 0.3 ms\n",
+    "        b.axis = v                               # pre-cython Jupyter 3.1 ms; GlowScript 0.4 ms \n",
+    "        #b.rotate(angle=.01, axis=vector(0,1,0)) # pre-cython Jupyter 38 ms; GlowScript 3.3 ms\n",
     "    ctime += clock()-ct\n",
-    "    loops += 1"
+    "    loops += 1\n",
+    "\n",
+    "# For b.axis = v:\n",
+    "# Use cyvector class: 2.3 ms (1.3 times better than vector)\n",
+    "\n",
+    "# For b.rotate(angle=.01, axis=vector(0,1,0)):\n",
+    "# Use cyvector class: 14.5 ms (2.6 times better than vector)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -91,14 +198,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
