Add Plot3D demo

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,6 +46,8 @@
     "\n",
     "[Mouse picking](Demos/MousePicking.ipynb): click on an object to change its color; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
     "\n",
+    "[Plot 3D function](Demos/Plot3D.ipynb): plot a function of x, y, and t\n",
+    "\n",
     "[Rotating boxes](Demos/RotatingBoxes.ipynb): 1000 rotating boxes\n",
     "\n",
     "[Rug](Demos/Rug.ipynb): a wave moves along a Navajo rug\n",
